--- a/templates/result.html
+++ b/templates/result.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 
-{% block title %}Contact Us{% endblock %}
+{% block title %}Result{% endblock %}
 
 {% block content %}
+<div class="container mx-auto px-4 my-4">
+    <div class="grid grid-cols-4 gap-4">
+      <!-- Example images -->
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res1.png" alt="Image 1" class="w-full">
+      </div>
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res2.jpg" alt="Image 2" class="w-full">
+      </div>
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res3.jpg" alt="Image 3" class="w-full">
+      </div>
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res4.jpg" alt="Image 4" class="w-full">
+      </div>
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res5.jpg" alt="Image 4" class="w-full">
+      </div>
+      <div class="col-span-4 sm:col-span-2 md:col-span-1">
+        <img src="../static/IMAGES/Res6.jpg" alt="Image 4" class="w-full">
+      </div>
+      <!-- Add more images here -->
+    </div>
+  </div>
 
 
 {% endblock %}
