--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,12 @@
             <ul class="flex space-x-9 text-xl font-sans font-medium">
               <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/aboutus">About Us</a></li>
               <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/contactus">Contact Us</a></li>
-              <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/signup">Signup</a></li>
-              <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/login">Login</a></li>
+              {% if session.logged_in %}
+                <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/logout">Logout</a></li>
+              {% else %}
+                <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/signup">Signup</a></li>
+                <li class=" hover:text-gray-300 hover:underline-offset-2 cursor-pointer"><a href="/login">Login</a></li>
+              {% endif %}
             </ul>
           </div>
         </div>
