--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -29,7 +29,7 @@
 
 
 <div class="container mx-auto px-4 my-4">
-    <form class="max-w-lg mx-auto">
+    <form class="max-w-lg mx-auto" method="post" action="/contactus">
       <!-- Full Name and Email ID -->
       <div class="grid grid-cols-2 gap-4 mb-4">
         <div>
