--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-{% extends 'base.html' %}
-
-{% block title %}Thank You {% endblock %}
-
-
-{% block content %}
-
-<div class="my-10">
-    <div class="container mx-auto px-4">
-        <div class="flex items-center justify-between">
-            <h1>Thank You Very Much</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/CSS/dist/style.css">
+    <title>Thank You</title>
+</head>
+<body class="container mx-auto px-4">
+        <div class="flex items-center justify-center content-center justify-items-center">
+            <div class="border-solid border-2 rounded-xl shadow-2xl shadow-slate-950 w-[80%] h-20 my-10">
+                <div class="container mx-auto px-4 h-[100%] my-4">
+                    <div class="flex items-center justify-center content-center justify-items-center">
+                        <h1 class="font-mono font-extrabold text-5xl">Thank You Very much !!</h1>
+                    </div>
+                </div>
+            </div>
+            
         </div>
-    </div>
-</div>
 
 
+        <div class="flex items-center justify-center content-center justify-items-center">
+            <div class="my-10">
+                <div class="border-solid border-2 bg-black text-white rounded-xl p-2 hover:bg-slate-800">
+                    <a href="/">Go back</a>
+                </div>
+            </div>
+        </div>
+        
+</body>
+</html>
 
-{% endblock %}
 
