--- a/templates/login.html
+++ b/templates/login.html
@@ -39,9 +39,9 @@
   
       <!-- Or Sign In with Google -->
       <div class="text-center">
-        <button class="bg-white text-black py-2 px-4 rounded-md border border-gray-300 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent">
+        <a href="/google-login" class="bg-white text-black py-2 px-4 rounded-md border border-gray-300 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-black focus:border-transparent">
           Or Sign in with Google
-        </button>
+        </a>
       </div>
     </div>
   </div>
