--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagine-X : Admin--Log-In</title>
+    <title>Imagine-X : Admin--DashBoard</title>
     <link rel="stylesheet" href="../static/CSS/dist/style.css">
 </head>
 <body class="bg-gray-100">
@@ -36,7 +36,7 @@
         <div class="flex items-center justify-center h-screen">
             <div class="border border-gray-300 shadow-lg rounded-lg p-8 bg-white">
                 <h1 class="text-xl font-semibold mb-6">IMAGINE-X Admin Login</h1>
-                <form action="/adminlogin" method="POST" class="space-y-4">
+                <form action="/admindashboard" method="POST" class="space-y-4">
                     <div class="flex items-center space-x-4">
                         <label for="password" class="w-20">Password</label>
                         <input type="password" name="password" id="password" class="border border-gray-300 rounded-md py-2 px-3 focus:outline-none focus:border-black flex-1">
